[project]
name = "langraph-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "ipython>=9.0.2",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.25",
    "openai>=1.70.0",
]
